compiler/tests/en/errors/slice_non_array.salam
// EXPECT: E021
func main:
    x := 5
    y := x[1: 2]
    println y
end
